--- a/report/report.tex
+++ b/report/report.tex
@@ -1,51 +1,60 @@
 \documentclass{article}
-\usepackage{geometry}[margin=2cm]
+\usepackage{geometry}[margin=9cm]
 
 \begin{document}
 
 \section{Playtesting}
-The first game concept I came up with was a turn-based three-dimensional boardgame. Convinced by the quality of this idea, I eagerly begun to build a physical prototype out of paper, chess pieces and other things I found. To simulate a three dimensional space, I simply put three grids next to another, which everyone who played the game understood surprisingly well. Initialy, I was moving the pieces around and tried to come up with rules, which didn't quite work out, so I asked my brother to play with me (that was on Feburary 26). With some initial difficulties (he didn't quite know what I was expecting him to do), we finally came up with a set of rules which I won't mention now. The game was fairly fun, however there were loats of balancing issues, so two days later I asked another family member for help so that I can try out different variations of the game. Playing the game with a different person was a completely different experience, and a lot of flaws were discovered in the rules. The biggest issue was that my playtester didn't quite the game's goal. Due to this experience, and my insistance on using GoDot as a game engine, which, as it turned out, might not be the best choice for 3D games, I chose to go with I different idea.
+The first game concept I came up with was a turn-based three-dimensional boardgame. I built a physical prototype from paper, chess pieces and other pieces. To simulate a three dimensional space, I drew grids on three papers witch I put next to one another. Initialy, I was moving the pieces around and tried to come up with rules, which didn't quite work out, so I asked my brother to play with me (that was on Feburary 26). With some initial difficulties (he didn't quite know what I was expecting him to do), we finally came up with a set of rules. Two days later I asked another family member for help so that I can try out different variations of the game, including a hexagon based board and different starting positions. Playing the game with a different person was a completely different experience, and a lot of flaws were discovered in the rules. The biggest issue was that my playtester didn't quite understand the goal. Due to this experience, and my insistance on using GoDot as a game engine, which, as I learned, might not be the best choice for 3D games, I chose to opt for different idea, a seagul simulator.
 
 \bigskip
-This time I wanted to create a seagull simulator, which was about stealing food from other people and completing quests. I did draw a map on paper and made some seagulls and humans from cardboard, tested it out myself, and two days after abandoning the previous idea, I was ready for a fresh playtest with my brother. Stealing food became boring very soon, however he was very keen on completing the quests. Overall, playing this game worked pretty well, and after doing another playtest with a friend I descided to implement a first physical prototype.
-I descided that I want to go for pixel art and asked a friend who's doing product design for some advice on this particular artstyle. When I included the assets in my prototype, however, I quickly realized that using pixel art won't work at all: assets had different sizes, the pixels also had different sizes, and it took ages to find the right assets. I initially though that I could simply draw my own sprites, but I quickly realized that this was not an option either. As a result, I descided to change the game concept again, and to come up with an idea based on the assets that I found, an approach that seemed to be appropriate at this point, especially because I was running out of time.
+The next concept was about stealing food from other people and completing quests. I did draw a map on paper and made some seagulls and humans from cardboard, tested it out myself, and two days later, I conducted another playtesting session with my brother. Stealing food became boring very soon, however he was very keen on completing the quests. 
+
+Once I was confident that the game idea had potential, I started to build a quick digital prototype. I quickly realized however that the art style I was using, which was pixel art, was causing me a lot of issues: it was very difficult to find good assets, especially because I couldn't draw them myself, and the assets had all different resolution, meaning that they didn't match at all. Frustrated and not willing to get any more headaches from aesthetical issues, I descided to change the game concept again.
 
 \bigskip
-I finally found a complete asset pack that I liked at kenneys.nl, and I descided to create a multiplayer platformer. For the time being I didn't do any playtesting and only focussed on learning godot's multiplayer API. Creating a project plan for assignment 1 helped me a lot to get more clarity over how the project should look like in the end. I started to implement the authentication system first, and the invitation functionallity and lobby afterwards. Once this was done, I started to implement the actual game. 
+I finally found a complete asset pack that I liked, and I descided to create a multiplayer platformer. For the time being I didn't do any playtesting and only focussed on learning godot's multiplayer API. Creating a project plan for assignment 1 helped me a lot to get more clarity over how the project should look like in the end. I started to implement the authentication system first, and the invitation functionallity and lobby afterwards. Once this was done, I started to implement the actual game. 
+
+Looking back at how I approached the project, it would have been much better if I had initially focused on the actual game itself, and not implementing user screen first. This approach would have allowed me to start with the playtesting process much earlier. Moreover, it would have forced me to think about encapsulation and decoupling right from the start. 
 
 \bigskip
-On April 18, I was ready to do the first digital playtest. Authentication, inviting players, starting the game from a lobby and playing two levels, as well as switching to the next level, did already work at this stage. It should be noted that the bridge in level 1 did still work as was described in the project plan. In this playtest I wanted to find out if the game is actually playable. My brother and his girlfriend happily volunteered to play the game on two separate computers, and were able to see the other's screen. In order to prepare for more formal playtesting session that I would have in the future, I started the session by telling them how playtesting is going to help me, that it's an unfinished prototype and that all their mistakes are going to help me. I also asked them to think out loud.
-I asked them questions about their experience with computer games, and initially this information appeared to be irrelevant, until I realized it's importance towards the end of the playtesting phase.
-Opon loggin in, they were confused by the font which is all capital letters. I later changed the authentication system to treat everything as lower case letters, which solved this issue and has the benefit that players with usernames that only differ in case cannot be confused anymore, an issue that occurs with almost every system that supports usernames.
-To my surprise, when trying to send out an invitation and starting the game through the lobby, they managed to break the system in ways I never imagined to be possible. In the end, I had to intervene and start the game for them.
-Just as every other pair I did playtesting with later on, they started the game by trying to work out how to control the game, and quickly realized that they could jump on top of each other. However, they mentioned that it would be great to have a screen that shows the available controls, however I chose to not implement this suggestion yet.
-They were also trolling each other by stepping off the button when the other player was on the bridge or staying on the button when they other player wanted to leave the whole under the bridge, a behaviour that would have been great to encourge, however I didn't encounter this in the following playtesting sessions.
+On April 18, I run the first digital playtesting session, in which I wanted to find out if the game was overall playable. Authentication, inviting players, starting the game from a lobby and playing two levels, as well as switching to the next level, did already work at this stage. It should be noted that the bridge in level 1 did still work as was described in the project plan. My brother and his girlfriend happily volunteered to play the game on two separate computers, and were able to see the other's screen. Just like any future session, I started off by telling them how playtesting is going to help me, that it's an unfinished prototype and that all their mistakes are going to help me. I also asked them to think out loud.
+I continued by asking question about their gaming habits: my brother regularly plays FPS, his girlfriend noting. 
 
-In the second level, they found a way to use the spring board in a way that wasn't intended. Due to the way the code worked at that time, they could simply stay on the board and their character would always jump higher once he touched the board.
+Opon loggin in, they were confused by the font which is all capital letters. I later changed the authentication system to treat everything as lower case letters, which solved this issue and has the benefit that players with usernames that only differ in case cannot be accidentally confused anymore, an issue that occurs with almost every system that supports usernames.
 
-Moreover, they had the assumption that they'd both needed to enter the exit at the same time, which was not the case but was changed just afterwards. As the level was a bit hard, they needed around seven attempt to reach the exit, but when I asked them some questions after they played the game, they confirmed that they were positively surprised by the difficuly, which motivated them to finish the level.
+To my surprise, when trying to send out an invitation and starting the game through the lobby (which still existed at this point), they managed to break the system in ways I never imagined to be possible. In the end, I had to intervene and start the game for them.
+
+They mentioned that it would be great to have a screen that shows the available controls, however I chose to not implement this suggestion yet.
+They were also trolling each other in different ways, a behaviour that would have been great to encourge, however I didn't encounter this in the following playtesting sessions.
+
+In the second level, they found a way to use the spring board in a way that wasn't intended. Due to the way the code worked at that time, they could simply stay on the board and their character would always jump a bit higher once he landed on the board. A variable was modified later on so that a player who jumps onto a spring board cannot jump any higher than the height that he had before jumping onto the board.
+
+Once the playtesting session was over, I asked them question about the game. They had the assumption that they'd both needed to enter the exit at the same time, which was changed later on based on their feedback. As the second level was a bit hard, they needed around seven attempt to reach the exit. When asked, they confirmed that they were positively surprised by the difficuly, which motivated them to finish the level.
 
 \bigskip
-The next day, I was doing a less formal, but remote playtest. This time I wanted to find out if it was possible to play the game with someone who's not on the same network as I am. I did setup port forwarding on my router at home so that the game servers could be reached from outside and so that I could share the executable client application with little effort. The playtester showed her screen so that I could see what she was doing. 
-Upon reaching level 2, she didn't understand how the spring board would work, so in an attempt to explain this concept within the game, another spring board which didn't require the player to jump as high as the second one was added right at the beginning.
+The next day, I was doing a less formal, remote playtest. This time I wanted to find out if it was possible to play the game with someone who's not on the same network as I am. I did setup port forwarding on my router at home so that the game servers could be reached from outside. The playtester shared her screen so that I could see what she was doing. 
+
+Upon reaching level 2, she didn't understand how the spring board would work, so I eventually had to explain it. The goal was to make the board as intuitive to use as possible, so I added another spring board at the beginning of the 2nd level. 
 
 Moreover, as her screen was quadratic, she couldn't see certain elements that I could see, an issue that I haven't thought about before.
 
 \bigskip
-I then organised another two playtesting session, however due to organizational issues they were both on the 23th, one at noon, one in the afternoon.
+I then organised another two playtesting sessions, both on the 23th. It would have been better to have them on two separate dates, but this wasn't possible due to organizational issues.
 
 \bigskip
-This time I was doing a playtest with people that normally don't play games. 
-Surprisingly, they didn't understand that the buttons were colour coded, so in order to make this more clear, I did put two buttons next to one another right in the beginning of level 1, which solved this issue.
-The also had issue with spring boards because were too tiny for them and they didn't quite understand the way they work. 
-Moreover, when they realized that they had to try the second level again because they fell off, their motivation was immediately gone, which is why the second level is now a bit easier to satisfy all potential players.
+The next session was a remote session with two of my friends that don't play video games.
 
-Another issue that I noted was that on one of the playtesters screen, the other player's character was not at the position where it was supposed to be but rather move all over the place. I attributed this issue to a bad internet connection
+Surprisingly, they didn't understand that the buttons were colour coded. In order to make this concept more intuitive,  I put two buttons with different colours next to one another right in the beginning of level 1 and changed the bridge's code to stay visible once both buttons were pressed.
+
+The also had issue with spring boards because were too tiny for them and they didn't quite understand the way they work, so I increased their size.
+Moreover, when they realized that they had to try the second level again because they fell off, their motivation was immediately gone, which is why the second level is now a bit easier to satisfy non-gamers alike.
+
+Another issue that is worth mentioning is that on one playtester's screen, the other player's character was not at the position where it was supposed to be but it rather moved all over the place. I attributed this issue to a bad internet connection
 
 \bigskip
-When doing the next playtesting session, the same issue that the player was all over the place occured, which actually made it impossible to properly test the game. After starting the game several times I found out that the game was running soothly on my computer, which was also running the server, but on some clients, not on all, it was impossible to play the game because the other player's character would always change the position. I decided to not fix this issue because it would have been a very difficult endeavor to spot this issue as I don't have the capacities to test on another network.
+When doing the next playtesting session, the aforementioned issue occured again, but impacted the gameplay so badly that it was impossible to properly test the game. I then asked each playertester to connect with a client that was running on my computer. I found out that my client run perfectly well, which I attributed to the server running on the same machine. Only one client had this issue, so I had to test the game with one playtester only. I decided to not fix this issue and focus on other aspects in the development because it would have been a very difficult endeavor to spot this issue and check if it's working because I don't have the capacities to test on another network and to get many more people who would be willing to test the game.
 
-In this version of the game, I added coins, increased the size of the spring board and changed the second level to better explain how spring boards work, which was doing a good job.
+It should be noted that, due to didactical issue in the session earlier that day, this version had coins, which I hope could guide the player and teach them how the spring board is to be used, which was confirmed by how the player played.
 
 \bigskip
 I also tried to playtest the game with people that I don't know by putting on a post in the playtesting channel in the Module's Teams Group, however I didn't get any replies, which is why this game was only tested with people I know.
