--- a/report/report.tex
+++ b/report/report.tex
@@ -12,9 +12,10 @@ The next concept was about stealing food from other people and completing quests
 Once I was confident that the game idea had potential, I started to build a quick digital prototype. I quickly realized however that the art style I was using, which was pixel art, was causing me a lot of issues: it was very difficult to find good assets, especially because I couldn't draw them myself, and the assets had all different resolution, meaning that they didn't match at all. Frustrated and not willing to get any more headaches from aesthetical issues, I descided to change the game concept again.
 
 \bigskip
-I finally found a complete asset pack that I liked, and I descided to create a multiplayer platformer. For the time being I didn't do any playtesting and only focussed on learning godot's multiplayer API. Creating a project plan for assignment 1 helped me a lot to get more clarity over how the project should look like in the end. I started to implement the authentication system first, and the invitation functionallity and lobby afterwards. Once this was done, I started to implement the actual game. 
+I finally found a complete asset pack that I liked, and I descided to create a multiplayer platformer. I didn't do any physical prototyping, but created a digital prototype to create levels for assignment 1, which helped me a lot to test the gameplay for myself. 
 
-Looking back at how I approached the project, it would have been much better if I had initially focused on the actual game itself, and not implementing user screen first. This approach would have allowed me to start with the playtesting process much earlier. Moreover, it would have forced me to think about encapsulation and decoupling right from the start. 
+Then, I started to implement the authentication system first, and the invitation functionallity and lobby afterwards. Once this was done, I started to implement the actual game. 
+Looking back at how I approached the project, it would have been much better if I had initially focused on the actual game itself, and not implementing user screens first. This approach would have allowed me to start with the playtesting process much earlier. Moreover, it would have forced me to think about encapsulation and decoupling right from the start. 
 
 \bigskip
 On April 18, I run the first digital playtesting session, in which I wanted to find out if the game was overall playable. Authentication, inviting players, starting the game from a lobby and playing two levels, as well as switching to the next level, did already work at this stage. It should be noted that the bridge in level 1 did still work as was described in the project plan. My brother and his girlfriend happily volunteered to play the game on two separate computers, and were able to see the other's screen. Just like any future session, I started off by telling them how playtesting is going to help me, that it's an unfinished prototype and that all their mistakes are going to help me. I also asked them to think out loud.
@@ -60,17 +61,17 @@ It should be noted that, due to didactical issue in the session earlier that day
 I also tried to playtest the game with people that I don't know by putting on a post in the playtesting channel in the Module's Teams Group, however I didn't get any replies, which is why this game was only tested with people I know.
 
 
-\section{Changes}
-Firstly, on the playerList screen, I only included a list that shows players which are currently logged in and not playing a game. The reason for this change is that it took significantly more time than I expected to set up the aforementioned list properly. 
+\section{Changes from project plan}
+Firstly, on the playerList screen, I only included a list that shows players which are currently logged in and not playing a game. It took significantly more time than I expected to set up the aforementioned list properly, and because a friend system wouldn't be necessary for the game to work, I descided to omit this feature. 
 
 \bigskip
-Moreover, I also removed the entire lobby screen because I realized that the lobby wasn't finished at all and it was causing issues when more than two players were logged in because if someone would enter or leave the lobby, the player list on the previous screen wouldn't always update. I decided to decouple and refactor the entire server code, which allowed me to at least get the invitations to work properly. 
+Moreover, I also removed the entire lobby screen. At some point in the development, I realised that the server side code was very messy and tightly coupled, which constantly caused bugs with the lobby and player list features. Then I decided to decouple and refactor the entire server code, which took quite a while. Because the lobby wasn't finished and not necessary for the game to work properly (as the friend system, it could be added in a theoretical future version of the game), I descided that it would be best to remove it entirely and to focus on the player list feature first (which still has some bugs, unfortunately) and to focus on play testing, which was pretty time consuming as well.
 
 \bigskip
-On the playerList screen, there is now a text which shows the currently logged in user, which is helpful for debugging purposes and for players alike
+On the playerList screen, there is now a text which shows the name of the currently logged in user, which is helpful for debugging purposes and for players alike.
 
 \bigskip
-Regarding the game itself, I did modify the levels quite strongly based on how players interacted with the levels. Moveable boxes, like the ones planned in level 2 were also removed as I chose to focus on other issues. As mentioned in the playtesting section, I added the option that platforms can appear and stay visible if two players simultaneously step onto the buttons. The reason for this change will be explained in the playtesting section.
+Regarding the game itself, I did modify the levels quite strongly based on how players interacted with the levels. Moveable boxes, like the ones planned in level 2 were also removed as I chose to focus on other issues. As mentioned in the playtesting section, I added the option that platforms can appear and stay visible if two players simultaneously step onto the buttons. 
 
 \section{Design Patterns}
 The Client Project uses Godot's build-in architectural design pattern, which, compared to a classical ECS, uses Nodes instead of entities with components, favours inheritance over composition, while still allowing the later to be used on a higher level, and, similar to systems in ECS, uses what the Godot developers call servers and lets Nodes have their own logic in the form of scripts. 
@@ -88,7 +89,7 @@ Moreover, every pressure plate that inherits from PressurePlat.gd emits a custom
 
 
 \bigskip
-Moreover, I made use of the Singleton pattern. Initially, I used way too many Singletons, which resulted in high coupling, especially in the Services project. Stritcly speaking, an Autoload in Godot, which I'm using as a Singleton, can be instanciated multiple times and is therefore, strictly speaking, not a Singleton.
+I made use of the Singleton pattern. Initially, I used way too many Singletons, which resulted in high coupling, especially in the Services project. Stritcly speaking, an Autoload in Godot, which I'm using as a Singleton, can be instanciated multiple times and is therefore, strictly speaking, not a Singleton.
 
 Singletons are used for every script that has a NetworkMultiplayerENet: Gateway.gd, Authentication.gd, Services.gd and TokenTransfer.gd. Using Singletons in this context makes sense as the rpc's can only call functions on a remote machine that have the same Node path, and Singletons guarantee this. Moreover, the networking functionality is expected to stay available during the entire game and needs to be accessible by every other Node. It might make sense to only call functions on the Networking Singletons only with signals, however as these nodes are assumed to always be available they're called directly.
 
@@ -99,16 +100,28 @@ Networking is done through godot's high level multiplayer API, which is mainly u
 
 As mentioned previously, all networking related functionality can be found in Authenticate.gd, Gateway.gd, TokenTransfer.gd and Services.gd.
 
-Each player is sending its position every frame to the game server (Services), which is sending the game state, consisting of every player's position, to every client, at 20 fps. When a client is receiving a world state, it is rendering the world state 100ms in the past, and is  interpolating or extrapolating, depending on whether or not a packet was lost, between two consecutive world states. The client will also notify the server when it enters or leaves the exit area.
+Each player is sending its position every frame to the game server (Services). Services is then sending the game state, consisting of every player's position, to all client at 20 fps (due to performance considerations). When a client is receiving a world state, it is rendering the game 100ms in the past. Packets that transport the world state may get lost in transit because an unreliable protocol was used to reduce the extra time that a reliable protocol like TCP would take for handshakes. As these packets may get lost, and because packet might not and will not arrive at the same frame rate as the client is rendering at, it is necessary to interpolate and extrapolate between world states, which is the reason why clients are rendering 100ms in the past.
+
+The client will also notify the server using a reliable protocol when it triggers an action, for instance when it enters or leaves the exit area or when it leaves the game.
+
+The is no server-side map implemented. As a result, the game server acts more like a proxy for two peers that are on a separate network, which is a very interesting concept that I haven't seen many games implementing. However, this also means that I'm facing most security issues that peer-to-peer games face, most notably that there is no central authority which checks if the players are cheating. I think that the issue mentioned in the playtesting section (the other character is changing its position to any place on the screen at a very fast rate) is due to the absence of a server-side map and an authority which checks for the validity of player states. 
+
+I only realized the occasional impact on the gameplay and the security issues that were associated with this design descision fairly late in the development process during a playtesting session. Considering that it would have been a major endeavor to implement a server-side map at this late stage, I descided to accept these flaws and focus on improving gameplay.
+
+Knowing what I know now, I would have implemented a server-side map and security checks right from the beginning, especially because that is the major advantage of a central server. Additionally, if I were to do such a project again, I would do more reading on the concepts and I would follow less tutorials. Tutorials are great to get started, but I think that it would be better to create two or three more prototypes to explore concepts such as server-side maps more in depth.
 
 
 \section{Security Considerations}
-One security aspect I considered is authentication, which works as follows:  When the client wants to login or create an account, he's sending the username and an encrypted password to the gateway server, which in turn connects to the Authentication server. The gateway is adding another layer of security as no client from the outside can directly connect to the authentication server. The authentication server is then verifying the credentials against a database (Which is just a simple json file, but could be replaced with an actual database in the future). If the credentials are correct, it generates and timestamps an authentication token and sends it via TokenTransfer.gd to the Services server and through the gateway to the client. The client then authenticates with Services through Services.gd by sending the authentication token that it received from the gateway. If the tokens match and the client authenticates within 30 seconds after the token was generated, the player is authenticated. 
+The major security aspect which I considered is authentication. To increase security, I opted to create a different projects for the server which checks credentials agains a database (Authentication), a Gateway which forwards authentication requests from Client to Authentication and back (Gateway), and a server on which multiple instances of the game run and services such as a feature to invite player are managed (Services).
 
-All communication, except between Client and Services, is encrypted using the Datagram Transport Layer Security (DTLS), the equivalent of TLS for UDP. The reason for not encrypting communication between Client and Services is that it would take too long to encrypt the game data.
+When the client wants to login or create an account, he's sending the username and an encrypted password to the gateway server, which in turn connects to the Authentication server. The gateway is adding another layer of security as no client from the outside can directly connect to the authentication server. The authentication server is then verifying the credentials against a database (Which is just a simple json file for the time being, but could be replaced with an actual database in the future). If the credentials are correct, it generates and timestamps an authentication token and sends it via TokenTransfer.gd to the Services server and through the gateway to the client. The client then authenticates with Services through Services.gd by sending the authentication token that it received from the gateway. If the tokens match and the client authenticates within 30 seconds after the token was generated, the player is authenticated. 
 
-\section{If I were to tackle this project again}
-Instead of developping the login system first, I would have started with the actual game first, so that I could have run playtesting session right from the beginning.
+All communication, except between Client and Services, is encrypted using the Datagram Transport Layer Security (DTLS). 
 
+In order to implement this feature, I created a new project CertGen which generates and saves a self signed x509 certificate and corresponding RSA key to its user:// directory. These files where then renamed and for every script that acts as a server, both the certificate and key were moved into a folder of the corresponding project and were included by the server script, and the corresponding certificate was copied into the Resource folder of the corresponding client in a different project. For instance, for gateway.gd, a client script from Client, and gateway.gd from Gateway, which acts as a server, the files cert\_gateway.crt and key\_gateway.key were move into Gateway->res://Resources/Certificates, and key\_gateway.crt into Client->res://Resources/Certificates.When a network peer is created, the setting dtls\_enabled is set to true and the key and certificates are connected with the corresponding network peer..
+
+The reason for not encrypting communication between Client and Services is that encryptinge game data would take too much time. Moreover, protection agains hacking is done by the server, and would be even more improved if there was a server-side map, as already mentioned. There is still the chance of a man-in-the-middle attack when the token is transfered. This risk still exists because I couldn't find a way to toggle between encryption and plain text in Godot's Multiplayer API.Encrypting everything would not have been an issue because that would result the game in being impressively slow. However, the attacker would only be able to get a token, which only last 30 seconds, and cannot deduct the password from it. 
+
+As mentioned previously, there is very litte validation of player states because there is no server-side map implemented. As said previously, a server-side map would have taken care of most error checking by simulating the player movement with its physics engine.
 
 \end{document}
